{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 19,
  "lineage": "8a2a384a-1c44-4e23-1fbc-98a1f59b7790",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:internet-gateway/igw-0d7362b8e717afdb2",
            "id": "igw-0d7362b8e717afdb2",
            "owner_id": "573275805523",
            "tags": {
              "Name": "dev-us-east-1-igw"
            },
            "tags_all": {
              "Name": "dev-us-east-1-igw"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "r_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d7362b8e717afdb2",
            "id": "r-rtb-0d7da0450d01a8f691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7da0450d01a8f69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:route-table/rtb-042ff287921b1eeb0",
            "id": "rtb-042ff287921b1eeb0",
            "owner_id": "573275805523",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtpriv"
            },
            "tags_all": {
              "Name": "rtpriv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:route-table/rtb-0d7da0450d01a8f69",
            "id": "rtb-0d7da0450d01a8f69",
            "owner_id": "573275805523",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtpub"
            },
            "tags_all": {
              "Name": "rtpub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpub_to_pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e6b0d930edd9757",
            "route_table_id": "rtb-0d7da0450d01a8f69",
            "subnet_id": "subnet-014f7240ca06fe781"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_subnet.pub",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077fba52d0b30a2e3",
            "route_table_id": "rtb-0d7da0450d01a8f69",
            "subnet_id": "subnet-0be39fae5890b1b0a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_subnet.pub",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeabe43b3319b908",
            "route_table_id": "rtb-0d7da0450d01a8f69",
            "subnet_id": "subnet-0780d9f3d51583292"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_subnet.pub",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:security-group/sg-018993c3cd15c799d",
            "description": "trusted network",
            "egress": [],
            "id": "sg-018993c3cd15c799d",
            "ingress": [],
            "name": "dev-us-east-1-trustedsg",
            "name_prefix": "",
            "owner_id": "573275805523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-us-east-1-trustedsg"
            },
            "tags_all": {
              "Name": "dev-us-east-1-trustedsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "untrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:security-group/sg-075e5c19d3f554895",
            "description": "Untrusted network",
            "egress": [],
            "id": "sg-075e5c19d3f554895",
            "ingress": [],
            "name": "dev-us-east-1-untrustedsg",
            "name_prefix": "",
            "owner_id": "573275805523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-us-east-1-untrustedsg"
            },
            "tags_all": {
              "Name": "dev-us-east-1-untrustedsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allowhttpsTrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-2064391155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-018993c3cd15c799d",
            "security_group_rule_id": "sgr-0b41c035fc17ee200",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.trusted",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allowhttpsUntrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-1220585297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075e5c19d3f554895",
            "security_group_rule_id": "sgr-0a4dd869486b5f9b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.untrusted",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:subnet/subnet-008f34baf52b04d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.110.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008f34baf52b04d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-us-east-1-priv-1"
            },
            "tags_all": {
              "Name": "dev-us-east-1-priv-1"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:subnet/subnet-007fc39d0fd180cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.110.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007fc39d0fd180cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-us-east-1-priv-2"
            },
            "tags_all": {
              "Name": "dev-us-east-1-priv-2"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:subnet/subnet-09fbf625d72148e20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.110.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fbf625d72148e20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-us-east-1-priv-3"
            },
            "tags_all": {
              "Name": "dev-us-east-1-priv-3"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:subnet/subnet-014f7240ca06fe781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.110.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014f7240ca06fe781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-us-east-1-pub-1"
            },
            "tags_all": {
              "Name": "dev-us-east-1-pub-1"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:subnet/subnet-0be39fae5890b1b0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.110.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be39fae5890b1b0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-us-east-1-pub-2"
            },
            "tags_all": {
              "Name": "dev-us-east-1-pub-2"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:subnet/subnet-0780d9f3d51583292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.110.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0780d9f3d51583292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-us-east-1-pub-3"
            },
            "tags_all": {
              "Name": "dev-us-east-1-pub-3"
            },
            "vpc_id": "vpc-0d220e0565567e86f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573275805523:vpc/vpc-0d220e0565567e86f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-0babd8b776e2461fc",
            "default_route_table_id": "rtb-0038b80cb0ff79e44",
            "default_security_group_id": "sg-0f194cd64bcb17c5f",
            "dhcp_options_id": "dopt-04601f12db888a9aa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d220e0565567e86f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0038b80cb0ff79e44",
            "owner_id": "573275805523",
            "tags": {
              "Name": "dev-us-east-1-vpc"
            },
            "tags_all": {
              "Name": "dev-us-east-1-vpc"
            }
          }
        }
      ]
    }
  ]
}